// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`respects custom "maxRetries" and "interval" arguments 1`] = `
[
  [
    100,
  ],
]
`;

exports[`respects custom "maxRetries" and "interval" arguments 2`] = `
[
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
]
`;

exports[`respects custom "maxRetries" and "interval" arguments 3`] = `
[
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
]
`;

exports[`respects custom "maxRetries" and "interval" arguments 4`] = `
[
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
]
`;

exports[`respects custom "maxRetries" and "interval" arguments 5`] = `
[
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
]
`;

exports[`respects custom "maxRetries" and "interval" arguments 6`] = `"FAILURE"`;

exports[`respects custom "maxRetries" and "interval" arguments 7`] = `
[
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
  [
    10,
  ],
  [
    100,
  ],
]
`;

exports[`works correctly with async actions 1`] = `
[
  [
    100,
  ],
]
`;

exports[`works correctly with async actions 2`] = `
[
  [
    100,
  ],
  [
    300,
  ],
  [
    100,
  ],
]
`;

exports[`works correctly with async actions 3`] = `"FAILURE"`;

exports[`works correctly with async actions 4`] = `
[
  [
    100,
  ],
  [
    300,
  ],
  [
    100,
  ],
  [
    300,
  ],
  [
    100,
  ],
]
`;

exports[`works correctly with sync actions 1`] = `[]`;

exports[`works correctly with sync actions 2`] = `
[
  [
    300,
  ],
]
`;

exports[`works correctly with sync actions 3`] = `"FAILURE"`;

exports[`works correctly with sync actions 4`] = `
[
  [
    300,
  ],
  [
    300,
  ],
]
`;
